--- a/FaPA/App.config
+++ b/FaPA/App.config
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="FaPA.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="FaPA.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   
-   <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+   <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <applicationSettings>
     <FaPA.Properties.Settings>
@@ -45,22 +45,37 @@
   
   <log4net>
     <appender name="NHibernateLogFile" type="log4net.Appender.FileAppender">
-      <file value="‪..\Logs\NHibernateLog.txt"/>
-      <appendToFile value="false"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file value="‪..\Logs\NHibernateLog.txt" />
+      <appendToFile value="false" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{HH:mm:ss.fff}%m%n==========%n"/>
+        <conversionPattern value="%date{HH:mm:ss.fff}%m%n==========%n" />
       </layout>
     </appender>
 
     <logger name="NHibernate" additivity="false">
-      <level value="WARN"/>
-      <appender-ref ref="NHibernateLogFile"/>
+      <level value="WARN" />
+      <appender-ref ref="NHibernateLogFile" />
     </logger>
     <logger name="NHibernate.SQL" additivity="false">
-      <level value="DEBUG"/>
-      <appender-ref ref="NHibernateLogFile"/>
+      <level value="DEBUG" />
+      <appender-ref ref="NHibernateLogFile" />
     </logger>
   </log4net>
   
+  <runtime>
+  
+       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-4.1.0.3001" newVersion="4.1.0.3001" />
+  
+            </dependentAssembly>
+  
+       </assemblyBinding>
+  
+  </runtime>
 </configuration>
