--- a/FaPA/packages.config
+++ b/FaPA/packages.config
@@ -5,7 +5,7 @@
   <package id="Caliburn.Micro.Core" version="3.0.1" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
-  <package id="NHibernate" version="4.0.4.4000" targetFramework="net452" />
+  <package id="NHibernate" version="4.1.0-CR1" targetFramework="net461" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
