--- a/FaPaTets/packages.config
+++ b/FaPaTets/packages.config
@@ -5,7 +5,7 @@
   <package id="Caliburn.Micro.Core" version="3.0.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
-  <package id="NHibernate" version="4.0.4.4000" targetFramework="net452" />
+  <package id="NHibernate" version="4.1.0-CR1" targetFramework="net461" />
   <package id="NUnit" version="3.4.1" targetFramework="net461" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
