--- a/FaPA/FaPA.csproj
+++ b/FaPA/FaPA.csproj
@@ -421,6 +421,7 @@
     <Compile Include="GUI\Feautures\Anagrafica\AnagraficaListViewModel.cs" />
     <Compile Include="GUI\Feautures\Anagrafica\EditAnagraficaViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiGeneraliDocumentoViewModel.cs" />
+    <Compile Include="GUI\Feautures\Fattura\ScontoMaggiorazioneGeneraleViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\ScontoMaggiorazioneViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiContrattoTabViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiConvenzioneTabViewModel.cs" />
