--- a/FaPA/FaPA.csproj
+++ b/FaPA/FaPA.csproj
@@ -172,7 +172,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="GUI\Design\Templates\DatiGeneraliDocumento.xaml">
+    <Page Include="GUI\Design\Templates\DatiDocumento.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="GUI\Design\Templates\DatiGenerali.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -269,6 +273,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="AppServices\CoreValidation\AltriDatiGestionaliValidator.cs" />
+    <Compile Include="AppServices\CoreValidation\AnagraficaValidator.cs" />
+    <Compile Include="AppServices\CoreValidation\DatiAnagraficiVettoreValidator.cs" />
+    <Compile Include="AppServices\CoreValidation\DatiTrasportoValidator.cs" />
+    <Compile Include="AppServices\CoreValidation\IdFiscaleValidator.cs" />
+    <Compile Include="AppServices\CoreValidation\IndirizzoValidator.cs" />
     <Compile Include="AppServices\CoreValidation\ScontoMaggiorazioneValidator.cs" />
     <Compile Include="AppServices\CoreValidation\NhAnagraficaValidator.cs" />
     <Compile Include="AppServices\CoreValidation\BaseCoreValidator.cs" />
@@ -412,22 +421,29 @@
     <Compile Include="GUI\Design\Converters\NullToBooleanConverter.cs" />
     <Compile Include="GUI\Design\Converters\NullToInverseVisibiltyConverter.cs" />
     <Compile Include="GUI\Design\Converters\NullToVisibiltyConverter.cs" />
-    <Compile Include="GUI\Design\Templates\DatiGeneraliDocumento.xaml.cs">
-      <DependentUpon>DatiGeneraliDocumento.xaml</DependentUpon>
+    <Compile Include="GUI\Design\Templates\DatiDocumento.xaml.cs">
+      <DependentUpon>DatiDocumento.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Design\Templates\DatiGenerali.xaml.cs">
+      <DependentUpon>DatiGenerali.xaml</DependentUpon>
     </Compile>
     <Compile Include="GUI\Design\Templates\ScontoMaggiorazione.xaml.cs">
       <DependentUpon>ScontoMaggiorazione.xaml</DependentUpon>
     </Compile>
     <Compile Include="GUI\Feautures\Anagrafica\AnagraficaListViewModel.cs" />
     <Compile Include="GUI\Feautures\Anagrafica\EditAnagraficaViewModel.cs" />
-    <Compile Include="GUI\Feautures\Fattura\DatiGeneraliDocumentoViewModel.cs" />
+    <Compile Include="GUI\Feautures\Fattura\BaseDatiCorrelatiViewModel.cs" />
+    <Compile Include="GUI\Feautures\Fattura\DatiDocumentoViewModel.cs" />
+    <Compile Include="GUI\Feautures\Fattura\DatiFattureCollegateTabViewModel.cs" />
+    <Compile Include="GUI\Feautures\Fattura\DatiGeneraliViewModel.cs" />
+    <Compile Include="GUI\Feautures\Fattura\DatiRicezioneTabViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\ScontoMaggiorazioneGeneraleViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\ScontoMaggiorazioneViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiContrattoTabViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiConvenzioneTabViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\UniqueFatturaValidationRule.cs" />
     <Compile Include="GUI\Feautures\Fattura\FatturaListViewModel.cs" />
-    <Compile Include="GUI\Feautures\Fattura\ReflectionHelpers.cs" />
+    <Compile Include="GUI\Utils\ReflectionHelpers.cs" />
     <Compile Include="GUI\Utils\TextBoxBehavior.cs" />
     <Compile Include="Infrastructure\Helpers\NhProxyInspector.cs" />
     <Compile Include="Infrastructure\IRepository.cs" />
@@ -507,7 +523,7 @@
     <Compile Include="GUI\Feautures\Fattura\Presenter.cs" />
     <Compile Include="GUI\Feautures\Fattura\SearchFatturaQueryObject.cs" />
     <Compile Include="GUI\Feautures\Fattura\View.xaml.cs" />
-    <Compile Include="GUI\Feautures\Fattura\WindowsUtil.cs" />
+    <Compile Include="GUI\Utils\WindowsUtil.cs" />
     <Compile Include="GUI\Feautures\Main\ItemSources.cs" />
     <Compile Include="GUI\Feautures\Main\Model.cs" />
     <Compile Include="GUI\Feautures\Main\Presenter.cs" />
