--- a/FaPA/FaPA.csproj
+++ b/FaPA/FaPA.csproj
@@ -447,6 +447,7 @@
     <Compile Include="GUI\Feautures\Anagrafica\AnagraficaListViewModel.cs" />
     <Compile Include="GUI\Feautures\Anagrafica\EditAnagraficaViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\BaseDatiCorrelatiViewModel.cs" />
+    <Compile Include="GUI\Feautures\Fattura\DatiAnagraficiViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiBolloViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiCassaPrevViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiDdtTabViewModel.cs" />
@@ -455,8 +456,10 @@
     <Compile Include="GUI\Feautures\Fattura\DatiFattureCollegateTabViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiGeneraliDocumentoViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiGeneraliViewModel.cs" />
+    <Compile Include="GUI\Feautures\Fattura\DatiIndirizzoViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiRicezioneTabViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiSalTabViewModel.cs" />
+    <Compile Include="GUI\Feautures\Fattura\DatiTrasportoViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\ScontoMaggiorazioneGeneraleViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\ScontoMaggiorazioneViewModel.cs" />
     <Compile Include="GUI\Feautures\Fattura\DatiContrattoTabViewModel.cs" />
