--- a/FaPA/FaPA.csproj
+++ b/FaPA/FaPA.csproj
@@ -748,9 +748,9 @@
     <Resource Include="GUI\Design\Styles\Images\fpa.jpg" />
     <Resource Include="GUI\Design\Styles\Images\gnome_panel_force_quit.png" />
     <Resource Include="GUI\Design\Styles\Images\Send File-48.png" />
-    <Resource Include="fatturapa_v1.1.xsl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
+    <Content Include="fatturapa_v1.1.xsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="nhibernate.cfg.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
