--- a/FaPA/App.config
+++ b/FaPA/App.config
@@ -8,6 +8,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   
    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="FaPA.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -24,10 +27,10 @@
         <value>\FEPA\DATA</value>
       </setting>
       <setting name="SqlServerInstanceName" serializeAs="String">
-        <value>\PAWARE</value>
+        <value />
       </setting>
       <setting name="ServerName" serializeAs="String">
-        <value>PC-t</value>
+        <value>CED</value>
       </setting>
     </FaPA.Properties.Settings>
   </applicationSettings>
@@ -78,4 +81,17 @@
        </assemblyBinding>
   
   </runtime>
+  <userSettings>
+    <FaPA.Properties.Settings>
+      <setting name="LastBackUpPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="TempPath" serializeAs="String">
+        <value>\FEPA\TEMP</value>
+      </setting>
+      <setting name="LastImportPath" serializeAs="String">
+        <value />
+      </setting>
+    </FaPA.Properties.Settings>
+  </userSettings>
 </configuration>
